--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -20,11 +20,13 @@
                 </ImageBrush>
             </Border.Background>
             <Canvas Width="4000"
-                Height="4000">
+                Height="4000"
+                    x:Name="canvas_enemy">
                 <Border Width="100"
                 Height="100"
                 Background="Yellow"
-                x:Name="Enemy" Canvas.Left="755" Canvas.Top="1275"
+                        x:Name="ENT"
+                 Canvas.Left="1550" Canvas.Top="2033" HorizontalAlignment="Center" VerticalAlignment="Top"
                 />
             </Canvas>
         </Border>
@@ -32,10 +34,13 @@
         <Border Width="100"
                 Height="100"
                 x:Name="Player"
-                Background="Aquamarine"
+                
                 Margin="350,250"
                 >
-
+            <Border.Background>
+                <ImageBrush ImageSource="Resources\image.png">
+                </ImageBrush>
+            </Border.Background>
         </Border>
 
 
