--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="1080" Width="1920"
         WindowStartupLocation="CenterScreen"
+        MouseRightButtonDown="Window_MouseRightButtonDown"
         WindowStyle="None"
         AllowsTransparency="True"
         Loaded="Window_Loaded"
