--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -26,13 +26,13 @@
                 Canvas.Left="-1600" Canvas.Top="-1783"
                 x:Name="BT"
                 >
-            
+
             <!--<Border.Background>
                 <ImageBrush ImageSource="Resources\ddd.jpg">
 
                 </ImageBrush>
             </Border.Background>-->
-            
+
             <Canvas Width="4000"
                 Height="4000"
                     x:Name="canvas_enemy">
@@ -43,10 +43,14 @@
                 Height="100"
                 x:Name="Player"
                 Margin="910, 482"
-                Background="Yellow"
+                Background="Transparent"
                 />
 
 
-
+        <Border x:Name="Menu_border" Background="Black" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
+            <Grid>
+                <Button Content="Exit" Click="Exit" Width="100" Height="40" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FontSize="20" />
+            </Grid>
+        </Border>
     </Canvas>
 </Window>
