--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -16,7 +16,7 @@
         Background="SandyBrown"
         KeyDown="Window_KeyDown"
         KeyUp="Window_KeyUp">
-    <Canvas x:Name="MainCanvas">
+    <Canvas x:Name="MainCanvas" Background="Transparent">
         <Border x:Name="Map_border">
             <Canvas x:Name="Map_canvas" Height="{Binding ElementName=BT, Path=ActualHeight}" Width="{Binding ElementName=BT, Path=ActualWidth}"
                     Margin="{Binding ElementName=BT,Path=Margin}"></Canvas>
@@ -39,8 +39,8 @@
             </Canvas>
         </Border>
 
-        <Border Width="100"
-                Height="100"
+        <Border Width="200"
+                Height="200"
                 x:Name="Player"
                 Margin="910, 482"
                 Background="Transparent"
