--- a/Team Project/App.xaml
+++ b/Team Project/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:Team_Project"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary >
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Dictionary1.xaml"
+                     >
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
