--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -45,15 +45,15 @@
             </Canvas>
         </Border>
 
-        <Border Width="120"
+        <!--<Border Width="120"
                 Height="180"
-                x:Name="Player"
+                x:Name="Playerp"
                 Margin="910, 482"
                 >
             <Border.Background>
                 <ImageBrush Stretch="None"/>
             </Border.Background>
-        </Border>
+        </Border>-->
         <!--<Border x:Name="NIghtBorder"
                         Width="4000"
                         Height="4000" d:IsHidden="True"
