--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -17,7 +17,7 @@
         KeyDown="Window_KeyDown"
         KeyUp="Window_KeyUp">
     <Window.Resources>
-        
+
     </Window.Resources>
     <Canvas x:Name="MainCanvas" Background="Transparent">
         <Border x:Name="Map_border">
@@ -69,13 +69,36 @@
                 
                         >
         </Border>-->
-        
+
 
         <Border x:Name="Menu_border" Background="Black" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
             <Grid>
                 <Button Content="Exit" Click="Exit" Width="100" Height="40" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FontSize="20" />
             </Grid>
         </Border>
-       
+
+        <Border Width="1200"
+                Height="200"
+                Background="MediumAquamarine" Canvas.Left="360"
+                Canvas.Top="880"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                CornerRadius="400,400,0,0">
+            <Canvas Width="1200"
+                    Height="200"
+                    >
+                <ProgressBar x:Name="PlayerHp" Value="{Binding Hp}" 
+                             Maximum="{Binding MaxHp}"
+                             Height="50"
+                             Width="600"
+                             >
+                    <ProgressBar.Style>
+                        <Style TargetType="{x:Type ProgressBar}">
+                            
+                        </Style>
+                    </ProgressBar.Style>
+                </ProgressBar>
+            </Canvas>
+        </Border>
     </Canvas>
 </Window>
