--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -19,6 +19,7 @@
     <Window.Resources>
 
     </Window.Resources>
+
     <Canvas x:Name="MainCanvas" Background="Transparent">
         <Border x:Name="Map_border">
             <Canvas x:Name="Map_canvas" Height="{Binding ElementName=BT, Path=ActualHeight}" Width="{Binding ElementName=BT, Path=ActualWidth}"
@@ -70,13 +71,14 @@
                         >
         </Border>-->
 
+        <Canvas x:Name="Player_Canvas" Height="{Binding ElementName=MainCanvas, Path=ActualHeight}" Width="{Binding ElementName=MainCanvas, Path=ActualWidth}"></Canvas>
         <Canvas x:Name="MapItems_canvas" Height="{Binding ElementName=BT, Path=ActualHeight}" Width="{Binding ElementName=BT, Path=ActualWidth}"
                     Margin="{Binding ElementName=BT,Path=Margin}">
         </Canvas>
         <Border x:Name="Menu_border" Background="Black" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
             <Grid>
+                <Label x:Name="lab" Height="50" Width="200" Foreground="White" ></Label>
                 <Button Content="Exit" Click="Exit" Width="100" Height="40" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FontSize="20" />
-                <Label x:Name="lab" Height="200" Width="100" Foreground="White" ></Label>
             </Grid>
         </Border>
 
