--- a/Team Project/Dictionary1.xaml
+++ b/Team Project/Dictionary1.xaml
@@ -2,24 +2,28 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="Enemy_Hp_ProgressBar" TargetType="{x:Type ProgressBar}">
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="BorderBrush" Value="Black"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ProgressBar}">
-                    <Canvas Height="20"
-                            Width="100"
+                    <Canvas Height="{TemplateBinding Height}"
+                            Width="{TemplateBinding Width}"
                             Background="{TemplateBinding Background}">
-                       
+                        <Border x:Name="Border"
+                                CornerRadius="7"
+                                Width="{TemplateBinding Width}"
+                                Height="{TemplateBinding Height}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                >
+                            
+                        </Border>
                         <Border x:Name="PART_Track"
                                 CornerRadius="7"
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 
                                 Width="{TemplateBinding Width}"
-                                Height="{TemplateBinding Height}">
-                            <Border.BorderBrush>
-                                <SolidColorBrush Color="Lime" />
-                            </Border.BorderBrush>
+                                Height="{TemplateBinding Height}"
+                                BorderBrush="{TemplateBinding BorderBrush}">
+                            
                         </Border>
                         <Border x:Name="PART_Indicator"
                                 CornerRadius="7"
@@ -28,55 +32,14 @@
                                 Background="{TemplateBinding Foreground}"
                                 Height="{TemplateBinding Height}"
                                 Width="{TemplateBinding Width}"
-                                Margin="0,0,0,0">
-                            <Border.BorderBrush>
-                                <LinearGradientBrush StartPoint="0,0"
-                                   EndPoint="0,1">
-                                    <GradientBrush.GradientStops>
-                                        <GradientStopCollection>
-                                            <GradientStop Color="{DynamicResource BorderLightColor}"
-                                  Offset="0.0" />
-                                            <GradientStop Color="{DynamicResource BorderMediumColor}"
-                                  Offset="1.0" />
-                                        </GradientStopCollection>
-                                    </GradientBrush.GradientStops>
-                                </LinearGradientBrush>
-
-                            </Border.BorderBrush>
-                            <Grid ClipToBounds="True"
-                  x:Name="Animation">
-                                <Rectangle x:Name="PART_GlowRect"
-                         Width="100"
-                         HorizontalAlignment="Left"
-                         Fill="{DynamicResource ProgressBarIndicatorAnimatedFill}"
-                         Margin="-100,0,0,0" />
-                            </Grid>
+                                Margin="0,0,0,0"
+                                BorderBrush="{TemplateBinding BorderBrush}">
+                            
                         </Border>
                     </Canvas>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Setter Property="Background">
-            <Setter.Value>
-                <LinearGradientBrush EndPoint="0,1"
-                           StartPoint="0,0">
-                    <GradientStop Color="{DynamicResource ControlLightColor}"
-                      Offset="0" />
-                    <GradientStop Color="{DynamicResource ControlMediumColor}"
-                      Offset="1" />
-                </LinearGradientBrush>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="Foreground">
-            <Setter.Value>
-                <LinearGradientBrush EndPoint="0.5,1"
-                           StartPoint="0.5,0">
-                    <GradientStop Color="{DynamicResource ControlMediumColor}"
-                      Offset="0" />
-                    <GradientStop Color="{DynamicResource ControlDarkColor}"
-                      Offset="1" />
-                </LinearGradientBrush>
-            </Setter.Value>
-        </Setter>
+      
     </Style>
 </ResourceDictionary>
