--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -14,8 +14,7 @@
         MouseLeftButtonDown="Window_MouseLeftButtonDown"
         MouseLeftButtonUp="Window_MouseLeftButtonUp"
         Background="SandyBrown"
-        KeyDown="Window_KeyDown"
-        KeyUp="Window_KeyUp">
+        KeyUp="Window_KeyUp" KeyDown="Window_KeyDown">
     <Window.Resources>
 
     </Window.Resources>
