--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -41,7 +41,11 @@
             <Canvas Width="4000"
                 Height="4000"
                     x:Name="canvas_enemy">
-
+                <Border Width="400"
+                        Height="400"
+                        Margin="2000"
+                        x:Name="T"
+                        Background="Black"></Border>
             </Canvas>
         </Border>
 
@@ -123,8 +127,8 @@
                         Margin="150,100"
                         Height="80"
                         Background="Gray">
-
                 </Border>
+                
             </Canvas>
         </Border>
     </Canvas>
