Xp system improve

--- a/Team Project/Dictionary1.xaml
+++ b/Team Project/Dictionary1.xaml
@@ -13,8 +13,8 @@
                                 Width="{TemplateBinding Width}"
                                 Height="{TemplateBinding Height}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
+                                Background="Gray"
                                 >
-                            
                         </Border>
                         <Border x:Name="PART_Track"
                                 CornerRadius="7"
