--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:local="clr-namespace:Team_Project"
         mc:Ignorable="d"
         Title="MainWindow" Height="1080" Width="1920"
@@ -14,7 +15,8 @@
         MouseLeftButtonDown="Window_MouseLeftButtonDown"
         MouseLeftButtonUp="Window_MouseLeftButtonUp"
         Background="SandyBrown"
-        KeyUp="Window_KeyUp" KeyDown="Window_KeyDown">
+        KeyUp="Window_KeyUp" KeyDown="Window_KeyDown"
+        >
     <Window.Resources>
 
     </Window.Resources>
@@ -41,11 +43,13 @@
             <Canvas Width="4000"
                 Height="4000"
                     x:Name="canvas_enemy">
-                <Border Width="400"
-                        Height="400"
-                        Margin="2000"
-                        x:Name="T"
-                        Background="Black"></Border>
+                <Image Width="200"
+                       x:Name="SpawnCampFire"
+                           Height="200"
+                           Margin="2200"
+                           
+                           >
+                </Image>
             </Canvas>
         </Border>
 
@@ -98,6 +102,14 @@
             <Canvas Width="1200"
                     Height="200"
                     >
+                <Label Foreground="OrangeRed" Content="Hp"
+                       FontSize="18"
+                       FontWeight="Bold"
+                       Margin="260,23"></Label>
+                <Label Foreground="#0022EE" Content="Mp"
+                       FontSize="18"
+                       FontWeight="Bold"
+                       Margin="260,53"></Label>
                 <ProgressBar x:Name="PlayerHp" Value="{Binding Hp}" 
                              Maximum="{Binding MaxHp}"
                              Height="25"
