--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -34,12 +34,6 @@
                 x:Name="BT"
                 >
 
-            <!--<Border.Background>
-                <ImageBrush ImageSource="Resources\ddd.jpg">
-
-                </ImageBrush>
-            </Border.Background>-->
-
             <Canvas Width="4000"
                 Height="4000"
                     x:Name="canvas_enemy">
@@ -111,16 +105,25 @@
 
         <Canvas x:Name="Player_Canvas" Height="{Binding ElementName=MainCanvas, Path=ActualHeight}" Width="{Binding ElementName=MainCanvas, Path=ActualWidth}"></Canvas>
         <Canvas x:Name="MapItems_canvas" Height="{Binding ElementName=BT, Path=ActualHeight}" Width="{Binding ElementName=BT, Path=ActualWidth}"
-                    Margin="{Binding ElementName=BT,Path=Margin}">
-            <Border Width="200"
-                        Height="200"
-                        Background="Black" Canvas.Left="3800" Canvas.Top="3800"/>
-        </Canvas>
-        <Border x:Name="Menu_border" Background="Black" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
-            <Grid>
-                <Label x:Name="lab" Height="50" Width="200" Foreground="White" ></Label>
-                <Button Content="Exit" Click="Exit" Width="100" Height="40" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FontSize="20" />
-            </Grid>
+                    Margin="{Binding ElementName=BT,Path=Margin}"/>
+        <Border x:Name="Menu_border"
+                CornerRadius="20"
+                Background="Gray" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
+            <Canvas>
+                <StackPanel Orientation="Vertical">
+                    <Button Content="Exit"
+                            Click="Exit"
+                            Width="100"
+                            Height="40" 
+                            BorderBrush="{x:Null}"
+                            Background="{x:Null}"
+                            Foreground="White"
+                            FontSize="20"
+                            Margin="150,40"/>
+                </StackPanel>
+                <!--<Label x:Name="lab" Height="50" Width="200" Foreground="White" ></Label>-->
+               
+            </Canvas>
         </Border>
 
         <!--<Canvas x:Name="MiniMap_canvas" Height="200" Width="200"
