--- a/Team Project/Dictionary1.xaml
+++ b/Team Project/Dictionary1.xaml
@@ -13,7 +13,7 @@
                                 Width="{TemplateBinding Width}"
                                 Height="{TemplateBinding Height}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
-                                Background="Gray"
+                                Background="#22272e"
                                 >
                         </Border>
                         <Border x:Name="PART_Track"
