--- a/Team Project/App.xaml
+++ b/Team Project/App.xaml
@@ -2,11 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Team_Project"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Launcher.xaml">
     <Application.Resources>
         <ResourceDictionary >
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Dictionary1.xaml"
+                <ResourceDictionary Source="StylesDictionary.xaml"
                      >
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
