--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Team_Project.MainWindow"
+<Window x:Class="Team_Project.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -19,61 +19,6 @@
         >
     <Window.Resources>
 
-        <Style x:Key="FocusVisual">
-            <Setter Property="Control.Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
-        <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
-        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
-        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
-        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
-        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
-        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
-        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
-        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
-        <Style x:Key="ButtonExitStyle" TargetType="{x:Type Button}">
-            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
-            <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
-            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
-            <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="HorizontalContentAlignment" Value="Center"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="1"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
-                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsDefaulted" Value="true">
-                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
-                            </Trigger>
-                            <Trigger Property="IsMouseOver" Value="true">
-                                <Setter Property="TextElement.FontSize" TargetName="contentPresenter" Value="25"/>
-                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="Orange"/>
-                            </Trigger>
-                            <Trigger Property="IsPressed" Value="true">
-                                <Setter Property="TextElement.FontSize" TargetName="contentPresenter" Value="25"/>
-                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="Red"/>
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
-                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
-                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
     </Window.Resources>
 
     <Canvas x:Name="MainCanvas" Background="Transparent">
@@ -160,16 +105,25 @@
 
         <Canvas x:Name="Player_Canvas" Height="{Binding ElementName=MainCanvas, Path=ActualHeight}" Width="{Binding ElementName=MainCanvas, Path=ActualWidth}"></Canvas>
         <Canvas x:Name="MapItems_canvas" Height="{Binding ElementName=BT, Path=ActualHeight}" Width="{Binding ElementName=BT, Path=ActualWidth}"
-                    Margin="{Binding ElementName=BT,Path=Margin}">
-            <Border Width="200"
-                        Height="200"
-                        Background="Black" Canvas.Left="3800" Canvas.Top="3800"/>
-        </Canvas>
-        <Border x:Name="Menu_border" Background="Black" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
-            <Grid>
-                <Label x:Name="lab" Height="50" Width="200" Foreground="White" ></Label>
-                <Button Style="{DynamicResource ButtonExitStyle}" Content="Exit" Click="Exit" Width="100" Height="40" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FontSize="20" />
-            </Grid>
+                    Margin="{Binding ElementName=BT,Path=Margin}"/>
+        <Border x:Name="Menu_border"
+                CornerRadius="20"
+                Background="#22272e" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
+            <Canvas>
+                <StackPanel Orientation="Vertical">
+                    <Button Content="Exit"
+                            Click="Exit"
+                            Width="100"
+                            Height="40" 
+                            BorderBrush="{x:Null}"
+                            Background="{x:Null}"
+                            Foreground="White"
+                            FontSize="20"
+                            Margin="150,40"/>
+                </StackPanel>
+                <!--<Label x:Name="lab" Height="50" Width="200" Foreground="White" ></Label>-->
+               
+            </Canvas>
         </Border>
 
         <!--<Canvas x:Name="MiniMap_canvas" Height="200" Width="200"
@@ -189,6 +143,32 @@
                        FontSize="18"
                        FontWeight="Bold"
                        Margin="260,23"></Label>
+                <Label Foreground="OrangeRed" Content="{Binding Hp}"
+                       FontSize="18"
+                       Width="90"
+                       Height="30"
+                       FontWeight="Bold"
+                       HorizontalContentAlignment="Left"
+                       x:Name="HpLabel"
+                       Margin="910,25"></Label>
+                <Label Foreground="#0022EE" Content="{Binding Mp}"
+                       FontSize="18"
+                       Width="90"
+                       Height="30"
+                       FontWeight="Bold"
+                       HorizontalContentAlignment="Left"
+                       x:Name="MpLabel"
+                       Margin="910,55"></Label>
+                <Label Foreground="Aqua" Content="{Binding Exp}"
+                       FontSize="18"
+                       Width="120"
+                       Height="30"
+                       FontWeight="Bold"
+                       HorizontalContentAlignment="Center"
+                       VerticalContentAlignment="Center"
+                       x:Name="XpLabel"
+                       Margin="1420,160">
+                </Label>
                 <Label Foreground="#0022EE" Content="Mp"
                        FontSize="18"
                        FontWeight="Bold"
@@ -244,7 +224,17 @@
         <Border x:Name="MiniMapBorder" Width="400"
                 Height="400"
                 Margin="1510,20"
-                Background="Gray"
+                Background="#22272e"
                 Opacity="0.8"></Border>
+
+        <Border x:Name="ChatBorder" Width="400"
+                Height="300"
+                Margin="0,780"
+                Background="#22272e"
+                Opacity="0.3">
+            <Canvas x:Name="ChatCanvas">
+                
+            </Canvas>
+        </Border>
     </Canvas>
 </Window>
