--- a/Team Project/MainWindow.xaml
+++ b/Team Project/MainWindow.xaml
@@ -106,26 +106,7 @@
         <Canvas x:Name="Player_Canvas" Height="{Binding ElementName=MainCanvas, Path=ActualHeight}" Width="{Binding ElementName=MainCanvas, Path=ActualWidth}"></Canvas>
         <Canvas x:Name="MapItems_canvas" Height="{Binding ElementName=BT, Path=ActualHeight}" Width="{Binding ElementName=BT, Path=ActualWidth}"
                     Margin="{Binding ElementName=BT,Path=Margin}"/>
-        <Border x:Name="Menu_border"
-                CornerRadius="20"
-                Background="#22272e" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
-            <Canvas>
-                <StackPanel Orientation="Vertical">
-                    <Button Content="Exit"
-                            Click="Exit"
-                            Width="100"
-                            Height="40" 
-                            BorderBrush="{x:Null}"
-                            Background="{x:Null}"
-                            Foreground="White"
-                            FontSize="20"
-                            Margin="150,40"/>
-                </StackPanel>
-                <!--<Label x:Name="lab" Height="50" Width="200" Foreground="White" ></Label>-->
-               
-            </Canvas>
-        </Border>
-
+       
         <!--<Canvas x:Name="MiniMap_canvas" Height="200" Width="200"
                    Canvas.Left="1665" Canvas.Top="10" HorizontalAlignment="Left" VerticalAlignment="Center" />-->
 
@@ -236,5 +217,48 @@
                 
             </Canvas>
         </Border>
+
+        <Border x:Name="InventoryBorder"
+                Width="900"
+                Height="700"
+                CornerRadius="17"
+                Background="#22272e"
+                Margin="510,140"
+                Visibility="Hidden"
+                >
+            <Canvas x:Name="InventCanvas"
+                    Width="900"
+                    Height="700"
+                    >
+                <Label Content="Inventory" FontSize="40"
+                       Foreground="White"
+                       Margin="10"></Label>
+                <ListBox x:Name="Items">
+                    
+                </ListBox>
+                
+            </Canvas>
+        </Border>
+
+        <Border x:Name="Menu_border"
+                CornerRadius="20"
+                Background="#22272e" Width="400" Height="400" Canvas.Left="760" Canvas.Top="340" Visibility="Hidden">
+            <Canvas>
+                <StackPanel Orientation="Vertical">
+                    <Button Content="Exit"
+                            Click="Exit"
+                            Width="100"
+                            Height="40" 
+                            BorderBrush="{x:Null}"
+                            Background="{x:Null}"
+                            Foreground="White"
+                            FontSize="20"
+                            Margin="150,40"/>
+                </StackPanel>
+                <!--<Label x:Name="lab" Height="50" Width="200" Foreground="White" ></Label>-->
+
+            </Canvas>
+        </Border>
+
     </Canvas>
 </Window>
